# glgui

./: CMakeLists.txt
cmake/: glguiConfig.cmake
include/: gl_gui.hpp
src/: gl_gui.cpp
test/include/: example.hpp
test/src/: example.cpp  main.cpp
